--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ about: http://7xof48.com1.z0.glb.clouddn.com/about.jpg
 favicon: http://7xof48.com1.z0.glb.clouddn.com/favicon.png
 basecss: 
 # Theme specific configuration
-title: songroger
+title: 林凡
 description: >
   Hi there, My name is Luozhan.Song, usually I use "songroger" as my ID everywhere.
   I was born and raised in Hunan China. 
