--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ description: >
 
 # Contact and social media links
 twitter_username: songrogero
-github_username: songroger
+github_username: jiugewang
 facebook_username: song.roger.1
 instagram_username: songroger198
 linkedin_username: songroger
