新加新浪博客

--- a/_config.yml
+++ b/_config.yml
@@ -18,6 +18,7 @@ description: >
 twitter_username: songrogero
 github_username: jiugewang
 facebook_username: song.roger.1
+xinlang_username: 36lovexin1314
 instagram_username: songroger198
 linkedin_username: songroger
 
