--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ baseurl: "" # the subpath of your site, e.g. /blog/
 url: "http://songroger.github.io/" # the base hostname & protocol for your site
 permalink: /:title/
 avatar: http://p2.sinaimg.cn/3281679641/180/51811474891415
-about: http://7xof48.com1.z0.glb.clouddn.com/about.jpg
+about: 
 favicon: http://p2.sinaimg.cn/3281679641/180/51811474891415
 basecss: 
 # Theme specific configuration
