--- a/_config.yml
+++ b/_config.yml
@@ -10,9 +10,7 @@ basecss:
 # Theme specific configuration
 title: 林凡
 description: >
-  Hi there, My name is Luozhan.Song, usually I use "songroger" as my ID everywhere.
-  I was born and raised in Hunan China. 
-  I'm really fond of beautiful design, drawing etc.
+  阅读即旅行，旅行在字里行间；而旅行也是另一种阅读，阅读着人情事故，一山一水。
 
 # Contact and social media links
 twitter_username: songrogero
