修改昵称和名字

--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,8 @@ about:
 favicon: http://p2.sinaimg.cn/3281679641/180/51811474891415
 basecss: 
 # Theme specific configuration
-title: 林凡
+title: 林凡的博客
+username: 反斜杠青年／林凡
 description: >
   阅读即旅行，旅行在字里行间；而旅行也是另一种阅读，阅读着人情事故，一山一水。
 
